--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>khatea</p>   
+    <p>khatea</p>  
+    p>khatea</p>
+    <p>khatea</p> 
 </body>
 </html>
